--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4"
+    "react-native": "^0.73.4",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
