--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-firebase/app": "^18.9.0",
     "@react-native-firebase/auth": "^18.9.0",
     "@react-navigation/bottom-tabs": "^6.5.19",
@@ -21,7 +22,9 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4"
+    "react-native": "^0.73.4",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
